# wizdroid-character

./: .gitignore  CIVITAI_DESCRIPTION.txt  CIVITAI_README.md  README.md  VERSION  __init__.py  pyproject.toml  quick-commit.sh  requirements.txt  test_image_category_rating.py  test_reference_fusion.py
data/: ancestral_ceremony_capsules.json  character_options.json  content_policies.json  contest.json  countries.json  cultural_capsules.json  cultures.json  fantasy_options.json  flux_klein_styles.json  followup_questions.json  glamour_options.json  meta_prompt_options.json  neo_folklore_capsules.json  option_descriptions.json  photo_aspect_modes.json  photography_styles.json  prompt_styles.json  qwen_multi_angle_options.json  regions.json  scene_data.json  uniform_options.json  upcycled_materials.json  video_camera_data.json  video_motion_types.json  video_scene_types.json
docs/: kohya_lora_trainer.md
lib/: __init__.py  constants.py  content_safety.py  data_files.py  helpers.py  paths.py  system_prompts.py
nodes/: ancestral_ceremony_node.py  background_edit_node.py  background_generator_node.py  character_edit_node.py  character_prompt_node.py  cinematic_shot_designer_node.py  contest_prompt_node.py  cultural_heritage_node.py  fantasy_scene_node.py  fashion_supermodel_node.py  i2v_animation_describer_node.py  image_edit_node.py  image_to_video_adapter_node.py  lora_dataset_node.py  lora_dataset_validator_node.py  lora_train_node.py  lora_validate_node.py  meta_prompt_node.py  motion_choreographer_node.py  multi_angle_node.py  multi_clip_story_planner_node.py  neo_folklore_node.py  photo_aspect_extractor_node.py  photography_style_node.py  pose_extraction_node.py  prompt_combiner_node.py  prompt_relay_generator_node.py  qwen_image_edit_node.py  (+10 more)
(+54 files in other folders)
